--- a/content/kactl.tex
+++ b/content/kactl.tex
@@ -1,22 +1,24 @@
-\documentclass[9pt, a4paper, notitlepage]{extreport}
+\documentclass[8pt, a4paper, notitlepage]{extreport}
 \usepackage{kactlpkg}
 \kactlcontentdir{content}
 
-\university{KTH}{KTH Royal Institute of Technology}{kth}
-\team{Omogen Heap}{Simon Lindholm, Johan Sannemo, Mårten Wiman}
+\university{UW}{University of Warsaw}{uw.png}
+\team{UW3}{Adam Sołtan, Ivan Gechu, Franciszek Witt}
 % \contest{ACM-ICPC World Finals 2017}{May 24, 2017}
-\contest{\ }{\today}
+\contest{EUC 2025}{\today}
 % \enablecolors
+
+\DeclareMathOperator{\arcsinh}{arcsinh}
 
 \begin{document}
 	\maketeampage
 	% Small KACTL header on the first page:
 	% \maketitle{``One Last Time'' Edition}{\today}
-	\begin{multicols*}{3}
-	\thispagestyle{fancy}
+	\begin{multicols*}{4}
 	% Table of contents, without subsections:
 	\setcounter{tocdepth}{0}
 	\tableofcontents
+	\thispagestyle{fancy}
 
 	\kactlchapter{contest}
 	\kactlchapter{math}
@@ -30,7 +32,7 @@
 	\kactlchapter{various}
 	\end{multicols*}
 
-	\begin{multicols*}{3}
-	\kactlchapter{appendix}
-	\end{multicols*}
+	% \begin{multicols*}{3}
+	% \kactlchapter{appendix}
+	% \end{multicols*}
 \end{document}
