--- a/content/contest/chapter.tex
+++ b/content/contest/chapter.tex
@@ -1,7 +1,8 @@
 \chapter{Contest}
 
-\kactlimport[-l rawcpp]{template.cpp}
+\kactlimport[-l rawcpp]{sol.cpp}
 \kactlimport[-l sh]{.bashrc}
 \kactlimport[-l raw]{.vimrc}
 \kactlimport[-l raw]{hash.sh}
+\kactlimport[-l sh]{test.sh}
 \kactlimport[-l raw]{troubleshoot.txt}
