--- a/content/graph/chapter.tex
+++ b/content/graph/chapter.tex
@@ -19,16 +19,21 @@
 	\kactlimport{DFSMatching.h}
 	\kactlimport{MinimumVertexCover.h}
 	\kactlimport{WeightedMatching.h}
-	\kactlimport{GeneralMatching.h}
+	% \kactlimport{GeneralMatching.h}
+  \kactlimport{Blossom.h}
+  \kactlimport{WeightedBlossom.h}
 
 \section{DFS algorithms}
 	\kactlimport{SCC.h}
 	\kactlimport{BiconnectedComponents.h}
 	\kactlimport{2sat.h}
 	\kactlimport{EulerWalk.h}
+  \kactlimport{Dominators.h}
+  \kactlimport{KthShortest.h}
 
 \section{Coloring}
 	\kactlimport{EdgeColoring.h}
+  \kactlimport{ChromaticNumber.h}
 
 \section{Heuristics}
 	\kactlimport{MaximalCliques.h}
