--- a/content/number-theory/chapter.tex
+++ b/content/number-theory/chapter.tex
@@ -1,7 +1,8 @@
 \chapter{Number theory}
 
 \section{Modular arithmetic}
-	\kactlimport{ModularArithmetic.h}
+	% \kactlimport{ModularArithmetic.h}
+	\kactlimport{ModInt.h}
 	\kactlimport{ModInverse.h}
 	\kactlimport{ModPow.h}
 	\kactlimport{ModLog.h}
