--- a/content/graph/chapter.tex
+++ b/content/graph/chapter.tex
@@ -47,6 +47,7 @@
 	\kactlimport{HLD.h}
 	\kactlimport{LinkCutTree.h}
 	\kactlimport{DirectedMST.h}
+	\kactlimport{CentroidTree.h}
 
 \section{Math}
 	\subsection{Number of Spanning Trees}
