--- a/content/combinatorial/chapter.tex
+++ b/content/combinatorial/chapter.tex
@@ -99,3 +99,8 @@
 			\item ways a convex polygon with $n+2$ sides can be cut into triangles by connecting vertices with straight lines.
 			\item permutations of $[n]$ with no 3-term increasing subseq.
 		\end{itemize}
+
+\section{Other}
+  \kactlimport{DeBruijn.h}
+  \kactlimport{PermGroup.h}
+  \kactlimport{GrayCode.h}
