--- a/content/graph/chapter.tex
+++ b/content/graph/chapter.tex
@@ -4,6 +4,7 @@
 	\kactlimport{BellmanFord.h}
 	\kactlimport{FloydWarshall.h}
 	\kactlimport{TopoSort.h}
+	\kactlimport{SPFA.h}
 
 \section{Network flow}
 	\kactlimport{PushRelabel.h}
@@ -30,6 +31,7 @@
 	\kactlimport{EulerWalk.h}
 	\kactlimport{Dominators.h}
 	\kactlimport{KthShortest.h}
+	\kactlimport{DenseDFS.h}
 
 \section{Coloring}
 	\kactlimport{EdgeColoring.h}
