--- a/content/geometry/chapter.tex
+++ b/content/geometry/chapter.tex
@@ -19,6 +19,7 @@
 	\kactlimport{CirclePolygonIntersection.h}
 	\kactlimport{circumcircle.h}
 	\kactlimport{MinimumEnclosingCircle.h}
+	\kactlimport{CirclesUnionArea.h}
 
 \section{Polygons}
 	\kactlimport{InsidePolygon.h}
@@ -27,9 +28,12 @@
 	\kactlimport{PolygonCut.h}
 	\kactlimport{PolygonUnion.h}
 	\kactlimport{ConvexHull.h}
+	\kactlimport{ConvexHullOnline.h}
 	\kactlimport{HullDiameter.h}
 	\kactlimport{PointInsideHull.h}
 	\kactlimport{LineHullIntersection.h}
+	\kactlimport{Minkowski.h}
+	\kactlimport{HalfplaneIntersection.h}
 
 \section{Misc. Point Set Problems}
 	\kactlimport{ClosestPair.h}
