--- a/content/geometry/chapter.tex
+++ b/content/geometry/chapter.tex
@@ -29,6 +29,7 @@
 	\kactlimport{PolygonUnion.h}
 	\kactlimport{ConvexHull.h}
 	\kactlimport{ConvexHullOnline.h}
+	\kactlimport{ConvexHullOnline2.h}
 	\kactlimport{HullDiameter.h}
 	\kactlimport{PointInsideHull.h}
 	\kactlimport{LineHullIntersection.h}
