--- a/content/graph/chapter.tex
+++ b/content/graph/chapter.tex
@@ -16,8 +16,9 @@
 	\kactlimport{GomoryHu.h}
 
 \section{Matching}
-	\kactlimport{hopcroftKarp.h}
-	\kactlimport{DFSMatching.h}
+	% \kactlimport{hopcroftKarp.h}
+	% \kactlimport{DFSMatching.h}
+  \kactlimport{Matching.h}
 	\kactlimport{MinimumVertexCover.h}
 	\kactlimport{WeightedMatching.h}
 	% \kactlimport{GeneralMatching.h}
