--- a/content/number-theory/chapter.tex
+++ b/content/number-theory/chapter.tex
@@ -9,6 +9,7 @@
 	\kactlimport{ModSum.h}
 	\kactlimport{ModMulLL.h}
 	\kactlimport{ModSqrt.h}
+	\kactlimport{PrimitiveRoot.h}
 
 \section{Primality}
 	\kactlimport{FastEratosthenes.h}
