--- a/content/number-theory/chapter.tex
+++ b/content/number-theory/chapter.tex
@@ -28,6 +28,7 @@
 	$$\left(x+\frac{kb}{\gcd(a,b)}, y-\frac{ka}{\gcd(a,b)}\right), \quad k\in\mathbb{Z}$$
 
 	\kactlimport{phiFunction.h}
+	\kactlimport{Min25.h}
 
 \section{Fractions}
 	\kactlimport{ContinuedFractions.h}
