--- a/content/data-structures/chapter.tex
+++ b/content/data-structures/chapter.tex
@@ -6,10 +6,12 @@
 \kactlimport{LazySegmentTree.h}
 \kactlimport{UnionFind.h}
 \kactlimport{UnionFindRollback.h}
+\kactlimport{DequeRollback.h}
 \kactlimport{SubMatrix.h}
 \kactlimport{Matrix.h}
 \kactlimport{LineContainer.h}
 \kactlimport{Treap.h}
+\kactlimport{IntSet.h}
 \kactlimport{FenwickTree.h}
 \kactlimport{FenwickTree2d.h}
 \kactlimport{RMQ.h}
