--- a/content/geometry/chapter.tex
+++ b/content/geometry/chapter.tex
@@ -27,6 +27,7 @@
 	\kactlimport{PolygonCenter.h}
 	\kactlimport{PolygonCut.h}
 	\kactlimport{PolygonUnion.h}
+	\kactlimport{PolygonTangents.h}
 	\kactlimport{ConvexHull.h}
 	\kactlimport{ConvexHullOnline.h}
 	\kactlimport{ConvexHullOnline2.h}
