--- a/content/strings/chapter.tex
+++ b/content/strings/chapter.tex
@@ -3,6 +3,8 @@
 \kactlimport{KMP.h}
 \kactlimport{Zfunc.h}
 \kactlimport{Manacher.h}
+\kactlimport{MainLorentz.h}
+\kactlimport{Lyndon.h}
 \kactlimport{MinRotation.h}
 \kactlimport{SuffixArray.h}
 \kactlimport{SuffixTree.h}
