--- a/content/numerical/chapter.tex
+++ b/content/numerical/chapter.tex
@@ -6,6 +6,7 @@
   \kactlimport{PolyInterpolate.h}
   \kactlimport{BerlekampMassey.h}
   \kactlimport{LinearRecurrence.h}
+	\kactlimport{FastMulDet.h}
 
 \section{Optimization}
   \kactlimport{GoldenSectionSearch.h}
