--- a/content/graph/chapter.tex
+++ b/content/graph/chapter.tex
@@ -48,7 +48,8 @@
 	\kactlimport{LCA.h}
 	\kactlimport{CompressTree.h}
 	\kactlimport{HLD.h}
-	\kactlimport{LinkCutTree.h}
+	% \kactlimport{LinkCutTree.h}
+	\kactlimport{LCT.h}
 	\kactlimport{DirectedMST.h}
 	\kactlimport{CentroidTree.h}
 
