--- a/content/graph/chapter.tex
+++ b/content/graph/chapter.tex
@@ -33,6 +33,7 @@
 	\kactlimport{Dominators.h}
 	\kactlimport{KthShortest.h}
 	\kactlimport{DenseDFS.h}
+	\kactlimport{PlanarFaces.h}
 
 \section{Coloring}
 	\kactlimport{EdgeColoring.h}
