--- a/content/geometry/chapter.tex
+++ b/content/geometry/chapter.tex
@@ -12,6 +12,7 @@
 	\kactlimport{LineProjectionReflection.h}
 	\kactlimport{Angle.h}
 	\kactlimport{AngleCmp.h}
+	\kactlimport{directedSegment.h}
 
 \section{Circles}
 	\kactlimport{CircleIntersection.h}
@@ -37,6 +38,7 @@
 	\kactlimport{LineHullIntersection.h}
 	\kactlimport{Minkowski.h}
 	\kactlimport{HalfplaneIntersection.h}
+	\kactlimport{PointLocation.h}
 
 \section{Misc. Point Set Problems}
 	\kactlimport{ClosestPair.h}
