--- a/content/graph/chapter.tex
+++ b/content/graph/chapter.tex
@@ -53,6 +53,7 @@
 	\kactlimport{LCT.h}
 	\kactlimport{DirectedMST.h}
 	\kactlimport{CentroidTree.h}
+	\kactlimport{RerootDP.h}
 
 \section{Math}
 	\subsection{Number of Spanning Trees}
