--- a/content/strings/chapter.tex
+++ b/content/strings/chapter.tex
@@ -9,4 +9,5 @@
 \kactlimport{SuffixArray.h}
 \kactlimport{SuffixTree.h}
 \kactlimport{Hashing.h}
+\kactlimport{Hash61.h}
 \kactlimport{AhoCorasick.h}
