--- a/content/number-theory/chapter.tex
+++ b/content/number-theory/chapter.tex
@@ -7,6 +7,7 @@
 	\kactlimport{ModPow.h}
 	\kactlimport{ModLog.h}
 	\kactlimport{ModSum.h}
+	\kactlimport{ModLinear.h}
 	\kactlimport{ModMulLL.h}
 	\kactlimport{ModSqrt.h}
 	\kactlimport{PrimitiveRoot.h}
