Add old poly and ntt

--- a/content/numerical/chapter.tex
+++ b/content/numerical/chapter.tex
@@ -30,3 +30,5 @@
 	\kactlimport{FastFourierTransformMod.h}
 	\kactlimport{NumberTheoreticTransform.h}
 	\kactlimport{FastSubsetTransform.h}
+	\kactlimport{FFT.h}
+	\kactlimport{FFTPoly.h}
