--- a/content/strings/chapter.tex
+++ b/content/strings/chapter.tex
@@ -11,4 +11,5 @@
 \kactlimport{Hashing.h}
 \kactlimport{Hash61.h}
 \kactlimport{AhoCorasick.h}
+\kactlimport{PalTree.h}
 \kactlimport{WildcardMatching.h}
