--- a/content/number-theory/chapter.tex
+++ b/content/number-theory/chapter.tex
@@ -30,6 +30,7 @@
 
 	\kactlimport{phiFunction.h}
 	\kactlimport{Min25.h}
+  \kactlimport{SameDiv.h}
 
 \section{Fractions}
 	\kactlimport{ContinuedFractions.h}
