--- a/content/various/chapter.tex
+++ b/content/various/chapter.tex
@@ -8,6 +8,7 @@
 \section{Dynamic programming}
 	\kactlimport{KnuthDP.h}
 	\kactlimport{DivideAndConquerDP.h}
+	\kactlimport{AliensTrick.h}
 
 \section{Misc. algorithms}
 	\kactlimport{TernarySearch.h}
