--- a/content/math/chapter.tex
+++ b/content/math/chapter.tex
@@ -72,6 +72,12 @@ y = r\sin\theta\sin\phi & \theta = \textrm{acos}(z/\sqrt{x^2+y^2+z^2})\\
 z = r\cos\theta & \phi = \textrm{atan2}(y,x)
 \end{array}\]
 
+\subsection{Pick's theorem}
+Let $i$ be the number of integer points interior to a polygon, and $b$ be
+the number of points on the boundary (including both vertices and points
+along the sides). Then the area $A$ of the polygon is:
+\[ A = i + \frac{b}{2} + 1. \]
+
 \section{Derivatives/Integrals}
 \begin{align*}
 	\dfrac{d}{dx}\arcsin x = \dfrac{1}{\sqrt{1-x^2}} &&& \dfrac{d}{dx}\arccos x = -\dfrac{1}{\sqrt{1-x^2}} \\
