--- a/content/graph/chapter.tex
+++ b/content/graph/chapter.tex
@@ -5,6 +5,7 @@
 	\kactlimport{FloydWarshall.h}
 	\kactlimport{TopoSort.h}
 	\kactlimport{SPFA.h}
+	\kactlimport{Shapes.h}
 
 \section{Network flow}
 	\kactlimport{PushRelabel.h}
