--- a/content/combinatorial/chapter.tex
+++ b/content/combinatorial/chapter.tex
@@ -116,3 +116,5 @@
 	\kactlimport{DeBruijn.h}
 	\kactlimport{PermGroup.h}
 	\kactlimport{GrayCode.h}
+	\kactlimport{MatroidIsect.h}
+	\kactlimport{WeightedMatroidIsect.h}
