--- a/content/various/chapter.tex
+++ b/content/various/chapter.tex
@@ -14,6 +14,7 @@
 	\kactlimport{TernarySearch.h}
 	\kactlimport{LIS.h}
 	\kactlimport{FastKnapsack.h}
+	\kactlimport{SubsetSum.h}
 
 % \section{Debugging tricks}
 % 	\begin{itemize}
