Add euler transform

--- a/content/kactl.tex
+++ b/content/kactl.tex
@@ -5,7 +5,7 @@
 \university{UW}{University of Warsaw}{uw.png}
 \team{UW3}{Adam Sołtan, Ivan Gechu, Franciszek Witt}
 % \contest{ACM-ICPC World Finals 2017}{May 24, 2017}
-\contest{EUC 2025}{\today}
+\contest{ICPC WF 2025}{\today}
 % \enablecolors
 
 \DeclareMathOperator{\arcsinh}{arcsinh}
