--- a/content/various/chapter.tex
+++ b/content/various/chapter.tex
@@ -15,6 +15,7 @@
 	\kactlimport{LIS.h}
 	\kactlimport{FastKnapsack.h}
 	\kactlimport{SubsetSum.h}
+	\kactlimport{SA.py}
 
 % \section{Debugging tricks}
 % 	\begin{itemize}
