--- a/content/graph/chapter.tex
+++ b/content/graph/chapter.tex
@@ -35,6 +35,7 @@
 	\kactlimport{KthShortest.h}
 	\kactlimport{DenseDFS.h}
 	\kactlimport{PlanarFaces.h}
+	\kactlimport{ChordalGraph.h}
 
 \section{Coloring}
 	\kactlimport{EdgeColoring.h}
