--- a/content/geometry/chapter.tex
+++ b/content/geometry/chapter.tex
@@ -44,8 +44,9 @@
 	\kactlimport{ClosestPair.h}
 	\kactlimport{ManhattanMST.h}
 	\kactlimport{kdTree.h}
-	% \kactlimport{DelaunayTriangulation.h}
+	\kactlimport{DelaunayTriangulation.h}
 	\kactlimport{FastDelaunay.h}
+	\kactlimport{SegmentsIntersection.h}
 
 \section{3D}
 	\kactlimport{PolyhedronVolume.h}
