--- a/content/various/chapter.tex
+++ b/content/various/chapter.tex
@@ -25,7 +25,7 @@
 % 		\item \verb@feenableexcept(29);@ kills the program on NaNs (\texttt 1), 0-divs (\texttt 4), infinities (\texttt 8) and denormals (\texttt{16}).
 % 	\end{itemize}
 % 
-% \section{Optimization tricks}
+\section{Optimization tricks}
 % 	\verb@__builtin_ia32_ldmxcsr(40896);@ disables denormals (which make floats 20x slower near their minimum value).
 % 	\subsection{Bit hacks}
 % 		\begin{itemize}
@@ -47,3 +47,4 @@
 	\kactlimport{BumpAllocatorSTL.h}
 	% \kactlimport{Unrolling.h}
 	% \kactlimport{SIMD.h}
+	\kactlimport{IntSort.h}
