Packing and pragmas

--- a/content/various/chapter.tex
+++ b/content/various/chapter.tex
@@ -16,6 +16,7 @@
 	\kactlimport{FastKnapsack.h}
 	\kactlimport{SubsetSum.h}
 	\kactlimport{SA.py}
+	\kactlimport{Packing.h}
 
 % \section{Debugging tricks}
 % 	\begin{itemize}
@@ -48,3 +49,4 @@
 	% \kactlimport{Unrolling.h}
 	% \kactlimport{SIMD.h}
 	\kactlimport{IntSort.h}
+	\kactlimport{Pragmas.h}
