--- a/content/contest/chapter.tex
+++ b/content/contest/chapter.tex
@@ -1,8 +1,8 @@
 \chapter{Contest}
 
-\kactlimport[-l rawcpp]{sol.cpp}
+\kactlimport[-l rawcpp]{main.cpp}
 \kactlimport[-l sh]{.bashrc}
-\kactlimport[-l raw]{.vimrc}
+% \kactlimport[-l raw]{.vimrc}
 \kactlimport[-l raw]{hash.sh}
 \kactlimport[-l sh]{test.sh}
 \kactlimport[-l raw]{troubleshoot.txt}
