--- a/content/kactl.tex
+++ b/content/kactl.tex
@@ -3,9 +3,9 @@
 \kactlcontentdir{content}
 
 \university{UW}{University of Warsaw}{uw.png}
-\team{UW3}{Adam Sołtan, Ivan Gechu, Franciszek Witt}
+\team{UW?}{Piotr Blinowski, Jakub Dziura, Dominik Wawszczak}
 % \contest{ACM-ICPC World Finals 2017}{May 24, 2017}
-\contest{ICPC WF 2025}{\today}
+\contest{AMPPZ 2025}{\today}
 % \enablecolors
 
 \DeclareMathOperator{\arcsinh}{arcsinh}
