ŁejwszczakTree, Mo3D, MinPlusConvolution, komentarz do Min25

--- a/content/data-structures/chapter.tex
+++ b/content/data-structures/chapter.tex
@@ -17,4 +17,6 @@
 \kactlimport{FenwickTree2d.h}
 \kactlimport{RMQ.h}
 \kactlimport{MoQueries.h}
+\kactlimport{Mo3D.h}
 \kactlimport{WaveletTree.h}
+\kactlimport{WaveszczakTree.h}
