--- a/content/kactl.tex
+++ b/content/kactl.tex
@@ -3,7 +3,7 @@
 \kactlcontentdir{content}
 
 \university{UW}{University of Warsaw}{uw.png}
-\team{UW?}{Piotr Blinowski, Jakub Dziura, Dominik Wawszczak}
+\team{UW3}{Piotr Blinowski, Jakub Dziura, Dominik Wawszczak}
 % \contest{ACM-ICPC World Finals 2017}{May 24, 2017}
 \contest{AMPPZ 2025}{\today}
 % \enablecolors
