--- a/content/various/chapter.tex
+++ b/content/various/chapter.tex
@@ -9,6 +9,7 @@
 	\kactlimport{KnuthDP.h}
 	\kactlimport{DivideAndConquerDP.h}
 	\kactlimport{AliensTrick.h}
+    \kactlimport{MinPlusConvolutionConvexArbitrary.h}
 
 \section{Misc. algorithms}
 	\kactlimport{TernarySearch.h}
