--- a/content/geometry/chapter.tex
+++ b/content/geometry/chapter.tex
@@ -24,6 +24,8 @@
 	\kactlimport{CirclesUnionArea.h}
 
 \section{Polygons}
+	\kactlimport{PolygonPrint.h}
+	\kactlimport{PolygonGen.h}
 	\kactlimport{InsidePolygon.h}
 	\kactlimport{PolygonArea.h}
 	\kactlimport{PolygonCenter.h}
