--- a/content/number-theory/chapter.tex
+++ b/content/number-theory/chapter.tex
@@ -67,3 +67,21 @@
   $ g(n) = \sum_{n|d} f(d) \Leftrightarrow f(n) = \sum_{n|d} \mu(d/n)g(d)$
 
  $ g(n) = \sum_{1 \leq m \leq n} f(\left\lfloor\frac{n}{m}\right \rfloor ) \Leftrightarrow f(n) = \sum_{1\leq m\leq n} \mu(m)g(\left\lfloor\frac{n}{m}\right\rfloor)$
+
+    $\epsilon\left(n\right) = [n = 1]$,
+    $id_k\left(n\right) = n^k$, $id = id_1$, $\mathbf{1} = id_0$,
+    $\sigma_k\left(n\right) = \sum_{d|n}d^k$, $\sigma = \sigma_1$, $\tau = \sigma_0$,
+    $\mu\left(p^k\right) = [k = 0] - [k = 1]$,
+    $\varphi\left(p^k\right) = p^k - p^{k - 1}$,
+    $\left(f \ast g\right)\left(n\right) = \sum_{d|n}f\left(d\right)g\left(\dfrac{n}{d}\right)$,
+    $f \ast g = g \ast f$,
+    $f \ast \left(g \ast h\right) = \left(f \ast g\right) \ast h$,
+    $f \ast \left(g + h\right) = f \ast g + f \ast h$,
+    jak dwie z trzech funkcji $f \ast g = h$ sa multiplikatywne, to trzecia tez,
+    $f \ast 1 = g \Leftrightarrow g \ast \mu = f$,
+    $f \ast \epsilon = f$,
+    $\mu \ast 1 = \epsilon$, $[n = 1] = \sum_{d|n}\mu\left(d\right) =\sum_{d=1}^n\mu\left(d\right)[d|n]$,
+    $\varphi \ast 1 = id$,
+    $id_k \ast \mathbf{1} = \sigma_k$, $id \ast \mathbf{1} = \sigma$, $\mathbf{1} \ast \mathbf{1} = \tau$,
+    $s_f\left(n\right) = \sum_{i=1}^nf\left(i\right)$,
+    $s_f\left(n\right) = \dfrac{s_{f\ast g}\left(n\right) - \sum_{d=2}^n s_f\left(\lfloor\frac{n}{d}\rfloor\right)g\left(d\right)}{g\left(1\right)}$.
