--- a/content/various/chapter.tex
+++ b/content/various/chapter.tex
@@ -9,23 +9,27 @@
 	\kactlimport{KnuthDP.h}
 	\kactlimport{DivideAndConquerDP.h}
 	\kactlimport{AliensTrick.h}
+	\kactlimport{1D1D.h}
     \kactlimport{MinPlusConvolutionConvexArbitrary.h}
+    \kactlimport{Larsch.h}
 
 \section{Misc. algorithms}
+    \kactlimport{ExpressionParsing.h}
 	\kactlimport{TernarySearch.h}
 	\kactlimport{LIS.h}
 	\kactlimport{FastKnapsack.h}
 	\kactlimport{SubsetSum.h}
+    \kactlimport{Young.h}
 	\kactlimport{SA.py}
 	\kactlimport{Packing.h}
 
-% \section{Debugging tricks}
-% 	\begin{itemize}
-% 		\item \verb@signal(SIGSEGV, [](int) { _Exit(0); });@ converts segfaults into Wrong Answers.
-% 			Similarly one can catch SIGABRT (assertion failures) and SIGFPE (zero divisions).
-% 			\verb@_GLIBCXX_DEBUG@ failures generate SIGABRT (or SIGSEGV on gcc 5.4.0 apparently).
-% 		\item \verb@feenableexcept(29);@ kills the program on NaNs (\texttt 1), 0-divs (\texttt 4), infinities (\texttt 8) and denormals (\texttt{16}).
-% 	\end{itemize}
+\section{Debugging tricks}
+	\begin{itemize}
+		\item \verb@signal(SIGSEGV, [](int) { _Exit(0); });@ converts segfaults into Wrong Answers.
+			Similarly one can catch SIGABRT (assertion failures) and SIGFPE (zero divisions).
+			\verb@_GLIBCXX_DEBUG@ failures generate SIGABRT (or SIGSEGV on gcc 5.4.0 apparently).
+		\item \verb@feenableexcept(29);@ kills the program on NaNs (\texttt 1), 0-divs (\texttt 4), infinities (\texttt 8) and denormals (\texttt{16}).
+	\end{itemize}
 % 
 \section{Optimization tricks}
 % 	\verb@__builtin_ia32_ldmxcsr(40896);@ disables denormals (which make floats 20x slower near their minimum value).
